--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.545.0",
+    "react-router-dom": "^6.14.0",
+    "@tanstack/react-query": "^4.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sonner": "^2.0.7",
@@ -17,6 +19,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "build:dev": "vite build --mode development",
     "preview": "vite preview"
@@ -40,6 +43,14 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1"
+    "typescript": "^5.5.0",
+    "vite": "^5.1.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/node": "^20.0.0",
+    "@vitejs/plugin-react-swc": "^3.3.0",
+    "tailwindcss": "^3.4.0",
+    "postcss": "^8.4.24",
+    "autoprefixer": "^10.4.14"
   }
 }
