--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -13,6 +13,14 @@ clarity_version = 2
 path = "contracts/escrow-secure.clar"
 clarity_version = 2
 
+[contracts.escrow-governance]
+path = "contracts/escrow-governance.clar"
+clarity_version = 2
+
+[contracts.governance-multisig]
+path = "contracts/governance-multisig.clar"
+clarity_version = 2
+
 [contracts.mock-token]
 path = "contracts/mock-token.clar"
 clarity_version = 2
