--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "bitmind-backend",
+  "name": "bitmind-smart-invoice-demo",
   "version": "1.0.0",
   "description": "AI-powered smart invoice management system on Stacks blockchain",
-  "main": "dist/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "backend:dev": "ts-node-dev --respawn --transpile-only backend/src/server.js",
+    "backend:build": "cd backend && npm run build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
-    "prisma:deploy": "prisma migrate deploy",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write \"src/**/*.ts\""
+    "prisma:studio": "prisma studio"
   },
   "keywords": [
     "blockchain",
