--- a/backend/package.json
+++ b/backend/package.json
@@ -1,55 +1,68 @@
 {
   "name": "bitmind-backend",
   "version": "1.0.0",
-  "description": "AI-powered Smart Invoice Backend for Stacks Blockchain",
-  "main": "src/server.js",
+  "description": "AI-powered smart invoice management system on Stacks blockchain",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
-    "prisma:seed": "node scripts/seed.js",
-    "test": "jest --detectOpenHandles",
+    "prisma:deploy": "prisma migrate deploy",
+    "test": "jest",
     "test:watch": "jest --watch",
-    "deploy:check": "node scripts/deploy.js"
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "keywords": [
     "blockchain",
     "stacks",
-    "invoice",
-    "escrow",
-    "ai",
-    "smart-contracts"
+    "bitcoin",
+    "smart-contracts",
+    "invoices",
+    "ai"
   ],
   "author": "BitMind Team",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@anthropic-ai/sdk": "^0.20.0",
+    "@prisma/client": "^5.11.0",
     "@stacks/network": "^6.13.0",
     "@stacks/transactions": "^6.13.0",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.6.7",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "express-rate-limit": "^7.2.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
-    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "openai": "^4.24.1",
-    "winston": "^3.11.0"
+    "openai": "^4.28.4",
+    "redis": "^4.6.13",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.10.5",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.11.25",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "prisma": "^5.7.0",
-    "supertest": "^6.3.3"
+    "prettier": "^3.2.5",
+    "prisma": "^5.11.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.4.2"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
   }
 }
-
