--- a/package.json
+++ b/package.json
@@ -6,20 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "contracts:check": "clarinet check",
-    "contracts:test": "clarinet test",
-    "contracts:console": "clarinet console",
-    "deploy:testnet": "cd contracts && clarinet deployments apply -p deployments/default.testnet-plan.yaml",
-    "backend:dev": "ts-node-dev --respawn --transpile-only backend/src/server.js",
-    "backend:build": "cd backend && npm run build",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "preview": "vite preview"
   },
   "keywords": [
     "blockchain",
@@ -32,8 +19,6 @@
   "author": "BitMind Team",
   "license": "MIT",
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.20.0",
-    "@prisma/client": "^5.11.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -59,32 +44,17 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.3",
-    "express-rate-limit": "^7.2.0",
-    "express-validator": "^7.0.1",
-    "helmet": "^7.1.0",
     "lucide-react": "^0.344.0",
-    "morgan": "^1.10.0",
-    "openai": "^4.28.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
-    "redis": "^4.6.13",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/compression": "^1.7.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.25",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -95,19 +65,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "prisma": "^5.11.0",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.2",
     "vite": "^5.1.6"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
   }
 }
