--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend:install": "cd backend && npm install",
+    "backend:build": "cd backend && npm run build",
+    "build:unified": "npm run build && npm run backend:install && npm run backend:build && npm run copy:backend",
+    "copy:backend": "node scripts/copy-backend.js"
   },
   "keywords": [
     "blockchain",
@@ -44,6 +48,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
