--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:dev": "vite build --mode development",
     "build:frontend": "tsc && vite build",
     "preview": "vite preview",
     "backend:install": "cd backend && npm install",
